feat: support swipe

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,15 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  overflow: hidden;
+}
+.swiper-zoom-container {
+  overflow: visible !important;
+}
